* Adjust `safe_water` and `safe_lava` behavior: they only warn of walking into
  such hazards in your INPUTTED direction, but won't stop you if stunning or
  confusion causes you to stumble sideways into them.
* Show the tombstone on death even if skipping disclosure information.
    - Extend the tombstone by a line for longer death causes, e.g. "petrified by
      kicking a chickatrice corpse".
* Fix the color of the Wizard's Tower walls when viewed from another level using
  the `Ctrl-O` dungeon overview.
* Fix "T - take off" not appearing in the item action menu of meat rings.
* Fix coordinates reported when getting a position from the player.

Configuration
-------------
* New `repeat_prefix` in the `keymap` option: Custom key to begin entering
  repeat prefixes for commands, e.g. set to "n" so "n20s" searches for 20 turns.
* New `repeat_num_auto` option: toggle whether or not pressing a number key
  automatically begins entering repeat prefixes; people who have a habit of
  using the top-row number keys for diagonal movement can toggle this option off
  and map those keys to the movement commands under the `keymap` option.

Technical
---------
* Clean up timer debugging code a bit.
* Fix warning when leaving bones while wielding an attached heavy iron ball.
* Fix infinite loop when placing a branch entrance on joined cavern levels.
* Allow SPILL lev_comp command to accept 0 as a size for e.g. breaking holes in
  cavern walls.
* Fix some replay desyncs due to uninitialized data.
* Prevent random chance to same-race polymorph in wizard mode.
* lev_comp: New `prize` flag for `OBJECT` statements, denoting objects that
  should be considered a prize of that level; prizes are ignored by monsters,
  don't fall down holes, are ignored by autopickup, and picking up a prize
  causes other prizes on that level to vanish.

DynaHack 0.5.5 (2014-01-16, 78d772a)
====================================
