@@ -1098,7 +1098,7 @@ int dopay(struct obj *oneitem)
 		pline("Pay whom?");
 		cc.x = u.ux;
 		cc.y = u.uy;
-		if (getpos(&cc, TRUE, "the creature you want to pay") < 0)
+		if (getpos(&cc, FALSE, "the creature you want to pay") < 0)
 		    return 0;	/* player pressed ESC */
 		cx = cc.x;
 		cy = cc.y;
