@@ -919,7 +919,7 @@ static int throwspell(schar *dx, schar *dy)
 	pline("Where do you want to cast the spell?");
 	cc.x = u.ux;
 	cc.y = u.uy;
-	if (getpos(&cc, TRUE, "the desired position") < 0)
+	if (getpos(&cc, FALSE, "the desired position") < 0)
 	    return 0;	/* user pressed ESC */
 	/* The number of moves from hero to where the spell drops.*/
 	if (distmin(u.ux, u.uy, cc.x, cc.y) > 10) {
